@@ -9,10 +9,10 @@ import org.dbunit.dataset.stream.IDataSetConsumer;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-import javax.xml.bind.DatatypeConverter;
 import java.io.IOException;
 import java.io.OutputStream;
 import java.io.OutputStreamWriter;
+import java.util.Base64;
 
 /**
  * Created by pestano on 11/09/16.
@@ -93,7 +93,7 @@ public class YMLWriter implements IDataSetConsumer {
                 }
                 if (values[i] != null) {
                     if (values[i] instanceof byte[]) {
-                        out.write(DatatypeConverter.printBase64Binary((byte[]) values[i]));
+                        out.write(Base64.getEncoder().encodeToString((byte[]) values[i]));
                     } else {
                         out.write(values[i].toString()
                                 .replace("\\", "\\\\")
